Fix cattool on mobile

--- a/public/css/sass/cattool.scss
+++ b/public/css/sass/cattool.scss
@@ -11,7 +11,6 @@ body.cattool {
   .page-content {
     display: flex;
     flex-direction: column;
-    height: 100%;
   }
 
   /*header*/
